--- a/Python/Basic_python_tutorial_final.html
+++ b/Python/Basic_python_tutorial_final.html
@@ -19159,7 +19159,7 @@ Name: Open, Length: 1259, dtype: float64
 <p>Compared with NumPy arrays, PyTorch tensors have added advantage that both tensors and related operations can run on the CPU or GPU.</p>
 <p>The second important thing that PyTorch provides allows tensors to keep track of the operations performed on them that helps to compute gradients or derivatives of an output with respect to any of its inputs.</p>
 <p>Installation:
-<a href="https://anaconda.org/pytorch/pytorch">https://anaconda.org/pytorch/pytorch</a></p>
+<a href="https://pytorch.org/get-started/locally/">https://pytorch.org/get-started/locally/</a></p>
 
 </div>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
@@ -19821,7 +19821,7 @@ dy/db: tensor(3.)
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><strong>Thank you!</strong>, hope this is help full to you</p>
+<p><strong>Thank you!</strong>, hope this will help you</p>
 
 </div>
 </div>
